--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
 <body>
 
   <h1>Home</h1>
-  <a href='/about.html'>About &#8594;</a>
+  <a href='/about.html'>About &#8594;</a><br />
+  <a href='/admin'>ADMIN AREA &#8594;</a>
 
 </body>
 </html>
