--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>Dashboard</h1>
+  <h1><img src='_assets/ic_dashboard.svg'> Dashboard</h1>
   <a href='users.html'>Users &#8594;</a>
 
 </body>
