--- a/src/admin/users.html
+++ b/src/admin/users.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>Users</h1>
+  <h1><img src='_assets/ic_users.svg'> Users</h1>
   <a href='/admin'>&#8592; Dashboard (admin home)</a><br />
   <a href='/'>&#8592; Home</a>
 
