--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>Home</h1>
+  <h1><img src='/_assets/ic_home.svg'> Home</h1>
   <a href='/about.html'>About &#8594;</a><br />
   <a href='/admin'>ADMIN AREA &#8594;</a>
 
