--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -3,10 +3,11 @@
 <head>
   <title>Dashboard</title>
   <link href='/_styles/app.css' rel='stylesheet'>
+  <link href='_styles/admin.css' rel='stylesheet'>
 </head>
 <body>
 
-  <h1><img src='_assets/ic_dashboard.svg'> Dashboard</h1>
+  <h1><img src='_assets/ic_dashboard.svg'> Dashboard <span class='admin-area'>(admin area)</span></h1>
   <a href='users.html'>Users &#8594;</a>
 
 </body>
