--- a/src/admin/index.html
+++ b/src/admin/index.html
@@ -3,12 +3,13 @@
 <head>
   <title>Dashboard</title>
   <link href='/_styles/app.css' rel='stylesheet'>
-  <link href='_styles/admin.css' rel='stylesheet'>
+  <link href='/admin/_styles/admin.css' rel='stylesheet'>
 </head>
 <body>
 
-  <h1><img src='_assets/ic_dashboard.svg'> Dashboard <span class='admin-area'>(admin area)</span></h1>
-  <a href='users.html'>Users &#8594;</a>
+  <h1><img src='/admin/_assets/ic_dashboard.svg'> Dashboard <span class='admin-area'>(admin area)</span></h1>
+  <a href='/admin/users.html'>Users &#8594;</a><br />
+  <a href='/'>&#8592; Home</a>
 
 </body>
 </html>
