--- a/src/admin/users.html
+++ b/src/admin/users.html
@@ -3,11 +3,11 @@
 <head>
   <title>Users</title>
   <link href='/_styles/app.css' rel='stylesheet'>
-  <link href='_styles/admin.css' rel='stylesheet'>
+  <link href='/admin/_styles/admin.css' rel='stylesheet'>
 </head>
 <body>
 
-  <h1><img src='_assets/ic_users.svg'> Users <span class='admin-area'>(admin area)</span></h1>
+  <h1><img src='/admin/_assets/ic_users.svg'> Users <span class='admin-area'>(admin area)</span></h1>
   <a href='/admin'>&#8592; Dashboard (admin home)</a><br />
   <a href='/'>&#8592; Home</a>
 
